--- a/countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -1,1 +1,4 @@
 <p>by-capital-page works!</p>
+<div>
+    <app-searchBox [placeholder]="'capital'" (searchTextChange)="handleSearchTextChange($event)"></app-searchBox>
+</div>
