--- a/countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -1,2 +1,2 @@
-<!-- <p>by-country-page works!</p> -->
-<app-searchBox></app-searchBox>
+<p>by-country-page works!</p>
+<app-searchBox [placeholder]="'País'" (searchTextChange)="handleSearchTextChange($event)"></app-searchBox>
