--- a/countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,1 +1,2 @@
 <p>by-region-page works!</p>
+<app-searchBox [placeholder]="'region'" (searchTextChange)="handleSearchTextChange($event)"></app-searchBox>
