--- a/countryApp/src/app/countries/pages/country-page/country-page.component.html
+++ b/countryApp/src/app/countries/pages/country-page/country-page.component.html
@@ -1,1 +1,2 @@
 <p>country-page works!</p>
+<app-searchBox [placeholder]="'pais 2'" (searchTextChange)="handleSearchTextChange($event)"></app-searchBox>
