--- a/countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -1,4 +1,8 @@
 <p>by-capital-page works!</p>
 <div>
-    <app-searchBox [placeholder]="'capital'" (searchTextChange)="handleSearchTextChange($event)"></app-searchBox>
-</div>
+    <h1>By Capital Page</h1>
+    <app-searchBox (searchTextChange)="handleSearchTextChange($event)" [placeholder]="'capital'"></app-searchBox>
+  </div>
+  <div>
+    <app-country-table [countries]="countries"></app-country-table>
+  </div>
