--- a/countryApp/src/app/countries/pages/country-page/country-page.component.html
+++ b/countryApp/src/app/countries/pages/country-page/country-page.component.html
@@ -1,2 +1,67 @@
-<p>country-page works!</p>
+<!-- <p>country-page works!</p>
 <app-searchBox [placeholder]="'pais 2'" (searchTextChange)="handleSearchTextChange($event)"></app-searchBox>
+<app-country-table></app-country-table> -->
+
+<ng-template #loading>
+    <div class="alert alert-info text-center">
+      Espere por favor
+    </div>
+  </ng-template>
+  <div *ngIf="country; else loading">
+    <div class="row">
+      <div class="col-12">
+        <h2>País: <strong>{{ country.name.common }}</strong></h2>
+        <hr>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-4">
+        <h3>Bandera</h3>
+        <img [src]="country.flags.svg" [alt]="country.name.common" class="img-thumbnail">
+      </div>
+      <div class="col-8">
+        <h3>Información</h3>
+        <ul class="list-group">
+          <li class="list-group-item">
+            <strong>Capital:</strong> {{ country.capital }}
+          </li>
+          <li class="list-group-item">
+            <strong>Población:</strong> {{ country.population | number }}
+          </li>
+          <li class="list-group-item">
+            <strong>Código:</strong> {{ country.cca3 }}
+          </li>
+          <li class="list-group-item">
+            <strong>Países limítrofes:</strong> {{ country.borders }}
+          </li>
+          <li class="list-group-item">
+            <strong>Zona horaria:</strong> {{ country.timezones }}
+          </li>
+          <li class="list-group-item">
+            <strong>Google Maps: </strong> <a href="country.maps.googleMaps">Link</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="row mt-2">
+      <div class="col-12">
+        <h3>Traducciones</h3>
+        <div class="d-flex flex-wrap">
+          <span class="badge bg-primary m-1">{{ country.translations['ara'].common }}</span>
+          <span class="badge bg-primary m-1">{{ country.translations['bre'].common }}</span>
+          <span class="badge bg-primary m-1">{{ country.translations['ces'].common }}</span>
+          <span class="badge bg-primary m-1">{{ country.translations['cym'].common }}</span>
+          <span class="badge bg-primary m-1">{{ country.translations['deu'].common }}</span>
+          <span class="badge bg-primary m-1">{{ country.translations['est'].common }}</span>
+          <span class="badge bg-primary m-1">{{ country.translations['fin'].common }}</span>
+          <span class="badge bg-primary m-1">{{ country.translations['ita'].common }}</span>
+          <span class="badge bg-primary m-1">{{ country.translations['kor'].common }}</span>
+          <span class="badge bg-primary m-1">{{ country.translations['per'].common }}</span>
+        </div>
+      </div>
+    </div>
+    <!-- <div class="row mt-2">
+        <iframe [src]="country.maps.googleMaps" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div> -->
+  </div>
