--- a/countryApp/src/app/shared/components/sidebar/sidebar.component.html
+++ b/countryApp/src/app/shared/components/sidebar/sidebar.component.html
@@ -13,10 +13,7 @@
         <a routerLink="/countries/capital">Capital</a>
     </li>
     <li class="list-group-item">
-        <a routerLink="/countries/country">Pais</a>
-    </li>
-    <li class="list-group-item">
-        <a routerLink="/countries/by-country-Page">Por Paises</a>
+        <a routerLink="/countries/name">Por Paises</a>
     </li>
     <li class="list-group-item">
         <a routerLink="/countries/region">Region</a>
