--- a/countryApp/src/app/shared/pages/contact-page/contact-page.component.html
+++ b/countryApp/src/app/shared/pages/contact-page/contact-page.component.html
@@ -1,1 +1,43 @@
-<p>contact-page works!</p>
+<h2 class="text-center font-bold uppercase col-12">Contacta con nosotros</h2>
+<form class="row g-3">
+    <div class="col-md-6">
+      <label for="inputEmail4" class="form-label">Nombre: </label>
+      <input type="text" class="form-control" placeholder="Martín">
+    </div>
+    <div class="col-md-6">
+      <label for="inputEmail4" class="form-label">Apellidos: </label>
+      <input type="text" class="form-control" placeholder="Matín">
+    </div>
+    <div class="col-md-12">
+      <label for="inputEmail4" class="form-label">Email</label>
+      <input type="email" class="form-control">
+    </div>
+    <div class="col-12">
+      <label for="inputAddress2" class="form-label">Comentarios: </label>
+      <input type="text" class="form-control">
+    </div>
+    <div class="col-md-4">
+      <label for="inputState" class="form-label">Genero</label>
+      <select id="inputState" class="form-select">
+        <option selected>Elige...</option>
+        <option>Femenino</option>
+        <option>Masculino</option>
+        <option>Otro</option>
+      </select>
+    </div>
+    <!-- <div class="col-md-2">
+      <label for="inputZip" class="form-label">Zip</label>
+      <input type="text" class="form-control" id="inputZip">
+    </div> -->
+    <div class="col-12">
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox">
+        <label class="form-check-label" for="gridCheck">
+          Acepta las condiciones.
+        </label>
+      </div>
+    </div>
+    <div class="col-12">
+      <button type="submit" class="btn btn-primary">Hablemos</button>
+    </div>
+  </form>
