--- a/countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -1,6 +1,5 @@
-<p>by-capital-page works!</p>
 <div>
-  <h1>By Capital Page</h1>
+  <h1>Búsqueda por Capitales</h1>
   <app-searchBox (searchTextChange)="handleSearchTextChange($event)" [placeholder]="'capital'"></app-searchBox>
 </div>
 <div>
