--- a/countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -1,6 +1,5 @@
-<p>by-country-page works!</p>
 <div>
-  <h1>By Country Page</h1>
+  <h1>Búsqueda por País</h1>
   <app-searchBox (searchTextChange)="handleSearchTextChange($event)" [placeholder]="'País'"></app-searchBox>
 </div>
 <div>
