--- a/countryApp/src/app/shared/components/searchBox/searchBox.component.html
+++ b/countryApp/src/app/shared/components/searchBox/searchBox.component.html
@@ -1,5 +1,5 @@
 <!-- <p>searchBox works!</p> -->
 <div>
     <input type="text" [placeholder]="placeholder" class="form-control" (input)="onSearchTextChange($event)">
-    <button (click)="onSearch()">Buscar</button>
+    <button (click)="onSearch()" class="btn btn-outline-danger btn-sm btn-anterior">Buscar</button>
 </div>
