--- a/countryApp/src/app/shared/pages/about-page/about-page.component.html
+++ b/countryApp/src/app/shared/pages/about-page/about-page.component.html
@@ -1,1 +1,40 @@
-<p>about-page works!</p>
+
+<h1 class="text-center">Explora Países</h1>
+<main class="container py-4">
+    <section>
+        <h2 class="mb-4">Acerca de Nosotros</h2>
+        <p>Somos una aplicación dedicada a proporcionar información detallada sobre países de todo el mundo. Nuestro objetivo es ayudar a los viajeros, estudiantes, investigadores y entusiastas de la geografía a explorar y comprender mejor la diversidad de culturas, paisajes y sociedades en el mundo.</p>
+        <p>En nuestra plataforma, puedes encontrar datos actualizados sobre cada país, incluyendo información sobre su ubicación, población, capital, idiomas, moneda, atracciones turísticas, y mucho más. También ofrecemos noticias y eventos relacionados con viajes y países para mantenerte informado.</p>
+        <p>Explora Países es un proyecto apasionante que busca fomentar el conocimiento y la apreciación de la riqueza cultural y natural de nuestro planeta. ¡Esperamos que disfrutes explorando con nosotros!</p>
+    </section>
+    
+    <section>
+        <h2 class="mt-5 mb-4">Nuestro Equipo</h2>
+        <div class="row">
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Gloria</h5>
+                        <p class="card-text">Desarrollador Web</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Páez</h5>
+                        <p class="card-text">Diseñadora UX/UI</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-4">
+                <div class="card">
+                    <div class="card-body">
+                        <h5 class="card-title">Masa</h5>
+                        <p class="card-text">Especialista en Contenidos</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+</main>
