--- a/countryApp/src/app/shared/pages/home-page/home-page.component.html
+++ b/countryApp/src/app/shared/pages/home-page/home-page.component.html
@@ -1,1 +1,22 @@
-<p>home-page works!</p>
+<section id="destacados">
+    <h2>Países Mal Destacados</h2>
+    <ul class="list-group">
+        <li class="list-group-item"><a href="https://es.wikipedia.org/wiki/Estados_Unidos">Estados Unidos</a></li>
+        <li class="list-group-item"><a href="https://es.wikipedia.org/wiki/Francia">Francia</a></li>
+        <a href="https://es.wikipedia.org/wiki/Portal:Pa%C3%ADses" class="btn btn-primary">Leer más</a>
+    </ul>
+</section>
+<br>
+<section id="noticias">
+    <h2>Noticias y Eventos</h2>
+    <article class="card">
+        <div class="card-body">
+            <h3 class="card-title">Descubrimiento en un País</h3>
+            <p class="card-subtitle text-muted">Fecha de Publicación: 21 de febrero de 2024</p>
+            <p class="card-text">Se ha descubierto un nuevo tipo de especie animal en la selva tropical de Amazónica, ubicada en el país de Amazonia.</p>
+            <p class="card-text">El equipo de científicos, liderado por la renombrada bióloga María Pérez, encontró esta especie durante una expedición de investigación de tres meses en la región. La especie, bautizada como "Amazonicus Explorator", es un pequeño mamífero con características únicas nunca antes vistas en la fauna mundial.</p>
+            <p class="card-text">Los científicos están emocionados por este descubrimiento y planean continuar estudiando el hábitat y el comportamiento de este fascinante animal para comprender mejor su papel en el ecosistema de la selva amazónica.</p>
+            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ&ab_channel=RickAstley" class="btn btn-primary">Leer más</a>
+        </div>
+    </article>
+</section>
