--- a/countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,6 +1,5 @@
-<p>by-region-page works!</p>
 <div>
-    <h1>By Región Page</h1>
+    <h1>Búsqueda por Región</h1>
     <!-- <app-searchBox [placeholder]="'region'" (searchTextChange)="handleSearchTextChange($event)"></app-searchBox> -->
   <app-searchBox (searchTextChange)="handleSearchTextChange($event)" [placeholder]="'Región'"></app-searchBox>
 </div>
