--- a/countryApp/src/app/countries/pages/country-page/country-page.component.html
+++ b/countryApp/src/app/countries/pages/country-page/country-page.component.html
@@ -21,7 +21,7 @@
         <img [src]="country.flags.svg" [alt]="country.name.common" class="img-thumbnail">
       </div>
       <div class="col-8">
-        <h3>Información</h3>
+        <h3>Información Adicional</h3>
         <ul class="list-group">
           <li class="list-group-item">
             <strong>Capital:</strong> {{ country.capital }}
@@ -38,9 +38,9 @@
           <li class="list-group-item">
             <strong>Zona horaria:</strong> {{ country.timezones }}
           </li>
-          <li class="list-group-item">
+          <!-- <li class="list-group-item">
             <strong>Google Maps: </strong> <a href="country.maps.googleMaps">Link</a>
-          </li>
+          </li> -->
         </ul>
       </div>
     </div>
@@ -48,16 +48,15 @@
       <div class="col-12">
         <h3>Traducciones</h3>
         <div class="d-flex flex-wrap">
-          <span class="badge bg-primary m-1">{{ country.translations['ara'].common }}</span>
-          <span class="badge bg-primary m-1">{{ country.translations['bre'].common }}</span>
-          <span class="badge bg-primary m-1">{{ country.translations['ces'].common }}</span>
-          <span class="badge bg-primary m-1">{{ country.translations['cym'].common }}</span>
-          <span class="badge bg-primary m-1">{{ country.translations['deu'].common }}</span>
-          <span class="badge bg-primary m-1">{{ country.translations['est'].common }}</span>
-          <span class="badge bg-primary m-1">{{ country.translations['fin'].common }}</span>
-          <span class="badge bg-primary m-1">{{ country.translations['ita'].common }}</span>
-          <span class="badge bg-primary m-1">{{ country.translations['kor'].common }}</span>
-          <span class="badge bg-primary m-1">{{ country.translations['per'].common }}</span>
+          <span class="badge bg-danger m-2">{{ country.translations['ara'].common }}</span>
+          <span class="badge bg-danger m-2">{{ country.translations['bre'].common }}</span>
+          <span class="badge bg-danger m-2">{{ country.translations['ces'].common }}</span>
+          <span class="badge bg-danger m-2">{{ country.translations['cym'].common }}</span>
+          <span class="badge bg-danger m-2">{{ country.translations['deu'].common }}</span>
+          <span class="badge bg-danger m-2">{{ country.translations['est'].common }}</span>
+          <span class="badge bg-danger m-2">{{ country.translations['fin'].common }}</span>
+          <span class="badge bg-danger m-2">{{ country.translations['ita'].common }}</span>
+          <span class="badge bg-danger m-2">{{ country.translations['kor'].common }}</span>
         </div>
       </div>
     </div>
